# Django-ToDo

./: README.md  pyproject.toml
templates/: home.html
todo_main/: asgi.py  settings.py  urls.py  views.py
todos/: admin.py  models.py  urls.py  views.py
todos/migrations/: 0001_initial.py
