[project]
name = "ToDo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mrityunjay", email = "mjguptacse@gmail.com"},
]
dependencies = ["django>=5.2.3", "psycopg2-binary>=2.9.10"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
